--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: python
 python:
     - "3.4"
 
+script:
+    - lsb_release -a
+
 before_install:
     - sudo apt-get update -qq
     - sudo apt-get install -qq libzmq3-dev
