--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: python
 python:
     - "3.4"
+# Command to install dependencies
+install:
+    - pip install .
 
 script:
     - lsb_release -a
 
 before_install:
     - sudo apt-get update -qq
-    - sudo apt-get install -qq libzmq3-dev
+    - sudo apt-get install libzmq3-dev
